<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search_text">Поиск</string>
    <string name="media_string">Медиатека</string>
    <string name="settings_title">Настройки</string>
    <string name="title" translatable="false">PlayList Maker</string>
    <string name="back_button">Назад</string>
    <string name="settingsTitle">Назад</string>
    <string name="dark_theme_text">Темная тема</string>
    <string name="share_app_text">Поделиться приложением</string>
    <string name="support_icon">SupportIcon</string>
    <string name="support_text">Написать в поддержку</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app_icon">ShareAppIcon</string>
    <string name="user_argeement">Пользовательское соглашение</string>
    <string name="arrow_forward" translatable="false">arrow_forward</string>
    <string name="search_screen_blank_text">Это заготовка экрана поиска</string>
    <string name="activity_not_found_toast_text">Активити не найдена</string>
    <string name="no_app_to_sent_email_toast_text">Нет приложения что бы отправить e-mail</string>
    <string name="no_app_to_open_page_toast_text">Нет приложения для открытия страницы</string>
    <string name="media_library_blank_text">Заготовка экрана Медиа Библиотеки</string>
    <string name="cant_open_the_page_toast_text">Невозможно открыть страницу</string>
    <string name="email_recipient_text" translatable="false">fh279@yandex.ru</string>
    <string name="email_subject_text">\"Сообщение разработчикам и разработчицам приложения Playlist Maker\"</string>
    <string name="email_body_text">Спасибо разработчикам и разработчицам за крнутое приложение!</string>
    <string name="user_agreement_link" translatable="false">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="button_clear" translatable="false">button_clear</string>
    <string name="song_title_draft" translatable="false">Song title draft</string>
    <string name="Song_artist_and_time_draft" translatable="false">song_artist_and_time_draft</string>
    <string name="nothing_found_text">Ничего не нашлось</string>
    <string name="network_issues_text">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh_button_text">Обновить</string>
    <string name="search_history_title">Вы искали</string>
    <string name="clear_history_button_text">Очистить историю</string>
    <string name="toast_track_added_text">Трек добавлен</string>
    <string name="track_duration_text">Длительность</string>
    <string name="album_text">Альбом</string>
    <string name="year_text">Год</string>
    <string name="artist_country_text">Страна</string>
    <string name="artist_genre_text">Жанр</string>
    <string name="content_description_button_add_to_favourites" translatable="false">button_add_to_favourites</string>
    <string name="content_description_button_add_to_playlist" translatable="false">button_add_to_playlist</string>
    <string name="content_description_button_play" translatable="false">button_play</string>
    <string name="album_cover_image" translatable="false">Album cover image</string>
    <string name="hardcoded_playback_progress_text" translatable="false">0:30</string>
    <string name="country_text_stub">Страна</string>
    <string name="genre_text_stub">Жанр</string>
    <string name="year_text_stub">Год</string>
    <string name="album_text_stub">Альбом</string>
    <string name="track_duration">Длительность</string>

</resources>