<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/settings_screen_toolbar"
        style="@style/SettingsToolbar"
        app:title="@string/settings_title"
        app:navigationIcon="?attr/homeAsUpIndicator" />

    <LinearLayout
        style="@style/SettingsItemContainer">

        <TextView
            style="@style/SettingsItemText"
            android:text="@string/dark_theme_text" />

        <Switch
            style="@style/SettingsSwitch"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </LinearLayout>

    <LinearLayout
        style="@style/SettingsItemContainer">

        <TextView
            style="@style/SettingsItemText"
            android:text="@string/share_app_text" />

        <ImageView
            style="@style/SettingsItemIcon"
            android:contentDescription="@string/share_app_icon"
            android:src="@drawable/baseline_share_24" />
    </LinearLayout>

    <LinearLayout
        style="@style/SettingsItemContainer">

        <TextView
            style="@style/SettingsItemText"
            android:text="@string/support_text" />

        <ImageView
            style="@style/SettingsItemIcon"
            android:contentDescription="@string/support_icon"
            android:src="@drawable/support" />
    </LinearLayout>

    <LinearLayout
        style="@style/SettingsItemContainer">

        <TextView
            style="@style/SettingsItemText"
            android:text="@string/user_argeement"
            android:textSize="16sp" />

        <ImageView
            style="@style/SettingsItemIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/arrow_forward"
            android:src="@drawable/arrow_forward" />
    </LinearLayout>

</LinearLayout>
