<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="#3772E7"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:paddingHorizontal="16dp">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/main_screen_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:backgroundTint="#3772E7"
        android:foregroundGravity="left"
        android:stateListAnimator="@null"
        app:contentInsetStart="0dp"
        app:title="@string/title"
        app:titleTextAppearance="@style/MainScreenToolbarTitleStyle"
        app:titleTextColor="@android:color/white" />


    <Button
        android:id="@+id/main_screen_search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:text="@string/search_text"
        android:textColor="@color/black"
        android:textSize="@dimen/main_screen_item_text_size"
        app:cornerRadius="@dimen/main_screen_button_corner_radius"
        app:icon="@drawable/magnifier_icon"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/main_screen_text_icon_padding"
        app:iconSize="@dimen/main_screen_button_icon_size"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/main_screen_media_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/magnifier_icon"
        android:text="@string/media_string"
        android:textColor="@color/black"
        android:textSize="@dimen/main_screen_item_text_size"
        app:cornerRadius="@dimen/main_screen_button_corner_radius"
        app:icon="@drawable/music_note_icon_svg"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/main_screen_text_icon_padding"
        app:iconSize="@dimen/main_screen_button_icon_size"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/main_screen_settings_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="28dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/magnifier_icon"
        android:text="@string/settings_title"
        android:textColor="@color/black"
        android:textSize="@dimen/main_screen_item_text_size"
        app:cornerRadius="@dimen/main_screen_button_corner_radius"
        app:icon="@drawable/gear_icon"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/main_screen_text_icon_padding"
        app:iconSize="@dimen/main_screen_button_icon_size"
        app:iconTint="@color/black" />
</LinearLayout>

