<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:id="@+id/search_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity"
    android:background="@color/recyclerViewBackgroundColor">
    <com.google.android.material.appbar.MaterialToolbar
        style="@style/SearchToolbar"
        android:id="@+id/search_screen_toolbar"
        app:title="@string/search_text"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <FrameLayout
        android:id="@+id/search_edit_text_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/item_margin_start"
        android:paddingVertical="8dp"
        app:layout_constraintTop_toBottomOf="@id/search_screen_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <EditText
            style="@style/SearchBarColors"
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:paddingHorizontal="@dimen/item_margin_start"
            android:paddingVertical="8dp"
            android:hint="@string/search_text"
            android:font="@font/ys_display_regular"
            android:textSize="16sp"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/magnifier_icon"
            android:drawableTint="@color/searchBarIcons"
            android:drawablePadding="8dp"
            android:paddingStart="@dimen/item_margin_start"
            android:paddingEnd="48dp"
            android:paddingTop="@dimen/item_margin_start"
            android:paddingBottom="@dimen/item_margin_start"
            android:inputType="text"
            android:maxLines="1" />
        <ImageButton
            android:id="@+id/clearButton"
            android:layout_width="@dimen/image_button_size"
            android:layout_height="@dimen/image_button_size"
            android:src="@drawable/clear"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/button_clear"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="@dimen/item_margin_start"
            app:tint="@color/searchBarIcons"
            android:visibility="gone" />
    </FrameLayout>
    <LinearLayout
        android:id="@+id/placeholderContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="210dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:id="@+id/placeholderImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/nothing_found_icon"
            android:contentDescription="@string/nothing_found_text"
            android:visibility="gone" />
        <TextView
            android:id="@+id/placeholderText"
            android:font="@font/ys_display_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textSize="19sp"
            android:textColor="@color/colorOnSurface"
            android:visibility="gone" />
        <Button
            android:id="@+id/placeholderRefreshButton"
            android:font="@font/ys_display_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refresh_button_text"
            android:visibility="gone"
            android:textSize="14sp"
            android:backgroundTint="@color/colorOnSurface"
            android:textColor="@color/recyclerViewBackgroundColor"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/track_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@color/recyclerViewBackgroundColor"
        app:layout_constraintTop_toBottomOf="@id/search_edit_text_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>